OSC: Fix spacing of module header.

--- a/src/css/scss/modules/one-sony-carousel-s2.scss
+++ b/src/css/scss/modules/one-sony-carousel-s2.scss
@@ -46,11 +46,14 @@
   }
 }
 
-/*  */
+.soc-header {
+  margin-top: 42px;
+}
+
 .sony-one-carousel {
   position: relative;
   overflow: visible;
-  margin:30px 0 30px 0;
+  margin: 6px 0 30px 0;
 
   .soc-dot-nav {
     height: 40px;
